# icdk

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-package.yml
src/uvmgen/: super_define.py  uvmgen.py
src/uvmgen/templates/agt_pkg/: agt.mako.sv  agt_pkg.mako.sv  cfg.mako.sv  cov.mako.sv  drv.mako.sv  if.mako.sv  item.mako.sv  mon.mako.sv  mon2cov_connect.mako.sv  reg_adapter.mako.sv  sqr.mako.sv
src/uvmgen/templates/env_pkg/: adapter.mako.sv  env.mako.sv  env_cfg.mako.sv  env_pkg.mako.sv  scb.mako.sv  vsqr.mako.sv
src/uvmgen/templates/ral_pkg/: ral_pkg.mako.sv
src/uvmgen/templates/seq_lib_pkg/: base_seq.mako.sv  seq.mako.sv  seq_lib.mako.sv  seq_lib_pkg.mako.sv  vseq.mako.sv
src/uvmgen/templates/tb_lib/: filelist.f  tb.mako.sv
src/uvmgen/templates/test_pkg/: base_test.mako.sv  test.mako.sv  test_builder.mako.sv  test_pkg.mako.sv
test/: test_base.py  test_example.py  test_seq_lib.py  test_super_define.py
test/json/: agt.json  env.json  seq_lib.json  tb.json  test.json
test/json/base_pkg/: agt.json  env.yaml  ral.json  ral.xml  seq_lib.json  tb.toml  test.json
test/json/example/: typical.json
test/super_define_data/: cfg_inc_exp.svh  sudef_inc.sv  sudef_inc_exp.sv  sudef_inline.sv  sudef_inline_exp.sv
